# ChangeLog for dev-python/colorama
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Apr 2012; James Rowe <jnrowe@gmail.com> colorama-0.2.4.ebuild:
  Switched to python-distutils-ng eclass.

  18 Mar 2012; James Rowe <jnrowe@gmail.com> colorama-0.2.4.ebuild:
  Switched to EAPI4.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> colorama-0.2.4.ebuild:
  Removed Python 2.4 support.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  28 Jul 2011; James Rowe <jnrowe@gmail.com> -colorama-0.2.3.ebuild,
  colorama-0.2.4.ebuild:
  Keyworded x86.

  28 Jul 2011; James Rowe <jnrowe@gmail.com> colorama-0.2.4.ebuild:
  Keyworded amd64.

  24 Jul 2011; James Rowe <jnrowe@gmail.com> -colorama-0.1.18.ebuild,
  colorama-0.2.3.ebuild:
  Keyworded x86.

  24 Jul 2011; James Rowe <jnrowe@gmail.com> colorama-0.2.3.ebuild:
  Keyworded amd64.

*colorama-0.2.4 (27 Jun 2011)

  27 Jun 2011; James Rowe <jnrowe@gmail.com> +colorama-0.2.4.ebuild:
  Version bump [404].

*colorama-0.2.3 (22 Jun 2011)

  22 Jun 2011; James Rowe <jnrowe@gmail.com> +colorama-0.2.3.ebuild:
  Version bump [391].

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  30 Sep 2010; James Rowe <jnrowe@gmail.com> colorama-0.1.18.ebuild:
  Keyworded x86.

  30 Sep 2010; James Rowe <jnrowe@gmail.com> colorama-0.1.18.ebuild:
  Keyworded amd64.

  31 Aug 2010; James Rowe <jnrowe@gmail.com> colorama-0.1.18.ebuild:
  Keyworded ~x86.

*colorama-0.1.18 (31 Aug 2010)

  31 Aug 2010; James Rowe <jnrowe@gmail.com> +colorama-0.1.18.ebuild,
  +metadata.xml:
  Initial ebuild, by me [1fe].
